objects/LLC_BI__Service_Mgmt_Detail__c.object
<CustomObject>
    <description>This object captures more information about a service and has the ability to tie it back to higher level details in Service Mgmt.</description>
    <fields>
        <fullName>LLC_BI__Coverage_Amount__c</fullName>
        <description>The user populates this optional currency field to state the total amount the service covers. By default, this field is blank.</description>
        <inlineHelpText>Enter the total amount the service covers.</inlineHelpText>
        <label>Coverage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deductible__c</fullName>
        <description>The user populates this optional currency field to state the policy’s service deductible. By default, this field is blank.</description>
        <inlineHelpText>Enter the total service deductible.</inlineHelpText>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Effective_Date__c</fullName>
        <description>The user populates this optional Date field to show when the service goes into effect. By default, this field is blank.</description>
        <inlineHelpText>Use this field to determine when the service goes into effect.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expiration_Date__c</fullName>
        <description>The user populates this optional Date field to determine when the service is no longer in effect. By default, this field is blank.</description>
        <inlineHelpText>Use this field to determine when the service is no longer in effect.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Occurrence_Amount__c</fullName>
        <description>The user populates this optional currency field to determine how much money is given to the borrower per occurrence. By default, this field is blank.</description>
        <inlineHelpText>Enter the total amount per occurrence.</inlineHelpText>
        <label>Occurrence Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Policy_Number__c</fullName>
        <description>The system auto populates this optional text field to display the policy number associated with the service.</description>
        <inlineHelpText>Displays the policy number associated with the service.</inlineHelpText>
        <label>Policy Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Service_Mgmt__c</fullName>
        <description>The system uses this required lookup field to locate the Service Management record.</description>
        <inlineHelpText>The lookup for the Service Management record.</inlineHelpText>
        <label>Service Mgmt</label>
        <referenceTo>LLC_BI__Service_Mgmt__c</referenceTo>
        <relationshipLabel>Service Mgmt Details</relationshipLabel>
        <relationshipName>Service_Mgmt_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>The user populates this optional picklist field to display the status of the service being detailed.</description>
        <inlineHelpText>Select the appropriate status of the service.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Sub_Type__c</fullName>
        <description>The user populates this optional picklist field to determine the sub type of service details being added. By default, this field appears after a service type is selected.</description>
        <inlineHelpText>Select a service sub type.</inlineHelpText>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Builder Risk</fullName>
                </value>
                <value>
                    <fullName>Business Interruption</fullName>
                </value>
                <value>
                    <fullName>Business Personal Property</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Collision &amp; Comprehensive</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Earthquake</fullName>
                </value>
                <value>
                    <fullName>Flood Building</fullName>
                </value>
                <value>
                    <fullName>Flood Contents</fullName>
                </value>
                <value>
                    <fullName>Hazard</fullName>
                </value>
                <value>
                    <fullName>Liability</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Multi Peril - Excluding Flood</fullName>
                </value>
                <value>
                    <fullName>Multi Peril - Including Flood</fullName>
                </value>
                <value>
                    <fullName>Real and Personal Property</fullName>
                </value>
                <value>
                    <fullName>Re-Insurance</fullName>
                </value>
                <value>
                    <fullName>Sinkhole</fullName>
                </value>
                <value>
                    <fullName>Terrorism</fullName>
                </value>
                <value>
                    <fullName>Title</fullName>
                </value>
                <value>
                    <fullName>Windstorm and Hail</fullName>
                </value>
                <value>
                    <fullName>Workers Compensation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>The user populates this optional picklist field to determine the type of service being detailed. By default, this field is set to Insurance.</description>
        <inlineHelpText>Select a service type.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insurance Policy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Mgmt Detail</label>
    <nameField>
        <label>Service Mgmt Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Mgmt Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>